...
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_event_title"
                    style="@style/EventCardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    tools:text="@string/example_card_title_text" />

...
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_calendar"
                        app:tint="@color/gray" />

                    <TextView
                        android:id="@+id/tv_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/gray"
                        android:textSize="12sp"
...
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_location"
                        app:tint="@color/blue_gray" />

                    <TextView
                        android:id="@+id/tv_address"
                        style="@style/RegularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="Санкт-Петербург, Кирочная улица, д. 50А, каб. 208" />

...
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_phone"
                        app:tint="@color/blue_gray" />

                    <TextView
                        android:id="@+id/tv_phone_number"
                        style="@style/RegularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="+7 (937) 037 37-73\n+7 (937) 016 16-16" />

...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/help_with_money"
                    app:layout_constraintStart_toEndOf="@id/became_volunteer"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/leaf"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
...
